syntax = "proto3";

package douyin.comment;;
option go_package = "../pb;pb";
import "user.proto";

// 评论信息
message Comment {
  int64 id = 1; // 评论id
  User user = 2; // 评论用户信息
  string content = 3; // 评论内容
  string create_date = 4; // 评论发布日期，格式 mm-dd
}

// 评论操作请求
message douyin_comment_action_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
  ActionType action_type = 3;
  string comment_text = 4;
  int64 comment_id = 5;
}

// 操作评论类型枚举
enum ActionType {
  SAVE = 0;
  DELETE = 1;
}

// 评论操作响应
message douyin_comment_action_response{
  int64 status_code = 1;
  int64 status_msg = 2;
  Comment comment = 3;
}

// 评论列表请求
message douyin_comment_list_request {
  string token = 1; // 用户鉴权token
  int64 video_id = 2; // 视频id
}

// 评论列表响应
message douyin_comment_list_response {
  int64 status_code = 1; // 状态码，0-成功，其他值-失败
  string status_msg = 2; //string or null 返回状态描述
  repeated Comment comment_list = 3; //array[object (Comment) {4}] or null 评论列表
}

// 评论接口方法
service comment_center {
  // 评论操作
  rpc ActionComment(douyin_comment_action_request) returns (douyin_comment_action_response);
  // 评论列表
  rpc ListComment(douyin_comment_list_request) returns (douyin_comment_list_response);
}